--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift,swiftpackagemanager,macos
+/code/frontend/Notes/Notes/GoogleService-Info.plist
